--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Python\\Python36\\python.exe"
+    "python.pythonPath": "C:\\Users\\liumi\\Anaconda3\\python.exe"
 }
